# Evolution_game_cpp

./: '  .gitignore  Button.cpp  Button.h  CMakeLists.txt  CustomMenu.cpp  CustomMenu.h  MainAppLoop.cpp  MainAppLoop.h  MainAppLoopTESTER.cpp  MainAppLoopTESTER.h  MainGameLoop.h  MainMenuLoop.cpp  Makefile  README.md  actions.h  attributes.h  body_structure.cpp  body_structure.h  brain.h  build.sh  camera_manipulation.cpp  dfasdfasdf  keyboard.cpp  keyboard.h  life_form.cpp  life_form.h  main.c  main.cpp  main_old.py  main_test.cpp  physics_model.cpp  physics_model.h  profile.txt  senses.h  test.cpp  utilities.cpp  utilities.h  visual_studio_playground.sln  world.cpp  (+1 more)
_code snippets/CUSTOM STUFF/: custom_menu.cpp  custom_menu.h  draw_utilities.cpp  draw_utilities.h  main.cpp
_code snippets/_tempCPP/: main.cpp
_code snippets/_temp_raylib_cpp/: main.cpp
_template_classes/: entity.h  entity_manager.h  game.h  input_manager.h
src/: _old_main.h  actions.cpp  actions.h  animal.cpp  animal.h  animal_buffer.h  animal_control.h  animal_factory.h  assert.h  attributes.h  basic_config.h  basic_settings.h  camera_manipulation.cpp  camera_manipulation.h  cell.h  config.h  custom_types.h  debug_mode.h  debuger.h  entitiy_manager.h  entity.h  entity_manager.cpp  entity_manager.h  event_listener.h  game.hpp  game_app.cpp  game_app.h  game_state.h  game_state_manager.cpp  game_state_manager.h  geometry.h  junkyard.h  keyboard.h  life_form.cpp  life_form.h  main.c  organism.h  organism_buffer.h  physical_object.h  plant.h  (+9 more)
src/obsolete/: basic_config.h  utils.h  (+11 more)
v0.001/: main.cpp
(+23 files in other folders)
